# TrueCite

./: .env  .env.templ  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
src/backend/: auditor.py  config.py  extractor.py  ingestion.py  main.py
src/backend/data/: audit_prompt.txt  extraction_prompt.txt  intake_registrar_prompt.txt
src/frontend/: app.py
src/true_cite/: config.py
src/true_cite/backend/: __init__.py  ingestion.py
