[project]
name = "truecite"
version = "0.1.0"
description = "AI Compliance Auditor"
authors = [
    {name = "hemanjalireddy",email = "43489240+hemanjalireddy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
