[project]
name = "truecite"
version = "0.1.0"
description = "AI Compliance Auditor"
authors = [
    {name = "hemanjalireddy",email = "43489240+hemanjalireddy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-google-vertexai (>=3.2.1,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
