[tool.poetry]
name = "true-cite"
version = "0.2.0"
description = "AI Compliance Auditor"
authors = ["Your Name"]
readme = "README.md"

packages = [
    {include = "backend", from = "src"},
    {include = "frontend", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
streamlit = "*"
python-multipart = "*"
requests = "*"
pandas = "*"
loguru = "*"
pydantic-settings = "*"
langchain = "^0.3.0"  
langchain-community = "^0.3.0"
langchain-core = "^0.3.0"
langchain-google-genai = "^2.0.0" 
langchain-chroma = "*"
pypdf = "*"
rank-bm25 = "^0.2.2"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"